examples/java/failing/preserve_order_in_commutative_additions/Right.java
class MyCls {
        int a;
        //! this is c
        int c;
        //! this is d
        int d;
        //! this is e
        int e;
}
